tests/NormalTests/paczka1/fuzzy1/86638666.err
Error in line 8: YoKziE5C S578 94,2
Error in line 14: YoKziE5C S578 56,6
Error in line 22: S578 S798 68,6
Error in line 37: w5vDnJdf7 A183 26,1
